// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OuiFlexGrid is rendered 1`] = `
<div
  aria-label="aria-label"
  class="ouiFlexGrid ouiFlexGrid--gutterLarge ouiFlexGrid--thirds ouiFlexGrid--responsive testClass1 testClass2"
  data-test-subj="test subject string"
>
  <h2>
    My Child
  </h2>
</div>
`;

exports[`OuiFlexGrid props columns 0 is rendered 1`] = `
<div
  class="ouiFlexGrid ouiFlexGrid--gutterLarge ouiFlexGrid--wrap ouiFlexGrid--responsive"
/>
`;

exports[`OuiFlexGrid props columns 1 is rendered 1`] = `
<div
  class="ouiFlexGrid ouiFlexGrid--gutterLarge ouiFlexGrid--single ouiFlexGrid--responsive"
/>
`;

exports[`OuiFlexGrid props columns 2 is rendered 1`] = `
<div
  class="ouiFlexGrid ouiFlexGrid--gutterLarge ouiFlexGrid--halves ouiFlexGrid--responsive"
/>
`;

exports[`OuiFlexGrid props columns 3 is rendered 1`] = `
<div
  class="ouiFlexGrid ouiFlexGrid--gutterLarge ouiFlexGrid--thirds ouiFlexGrid--responsive"
/>
`;

exports[`OuiFlexGrid props columns 4 is rendered 1`] = `
<div
  class="ouiFlexGrid ouiFlexGrid--gutterLarge ouiFlexGrid--fourths ouiFlexGrid--responsive"
/>
`;

exports[`OuiFlexGrid props direction column is rendered 1`] = `
<div
  class="ouiFlexGrid ouiFlexGrid--gutterLarge ouiFlexGrid--wrap ouiFlexGrid--directionColumn ouiFlexGrid--responsive"
/>
`;

exports[`OuiFlexGrid props direction row is rendered 1`] = `
<div
  class="ouiFlexGrid ouiFlexGrid--gutterLarge ouiFlexGrid--wrap ouiFlexGrid--responsive"
/>
`;

exports[`OuiFlexGrid props gutterSize l is rendered 1`] = `
<div
  class="ouiFlexGrid ouiFlexGrid--gutterLarge ouiFlexGrid--wrap ouiFlexGrid--responsive"
/>
`;

exports[`OuiFlexGrid props gutterSize m is rendered 1`] = `
<div
  class="ouiFlexGrid ouiFlexGrid--gutterMedium ouiFlexGrid--wrap ouiFlexGrid--responsive"
/>
`;

exports[`OuiFlexGrid props gutterSize none is rendered 1`] = `
<div
  class="ouiFlexGrid ouiFlexGrid--gutterNone ouiFlexGrid--wrap ouiFlexGrid--responsive"
/>
`;

exports[`OuiFlexGrid props gutterSize s is rendered 1`] = `
<div
  class="ouiFlexGrid ouiFlexGrid--gutterSmall ouiFlexGrid--wrap ouiFlexGrid--responsive"
/>
`;

exports[`OuiFlexGrid props gutterSize xl is rendered 1`] = `
<div
  class="ouiFlexGrid ouiFlexGrid--gutterXLarge ouiFlexGrid--wrap ouiFlexGrid--responsive"
/>
`;

exports[`OuiFlexGrid props responsive is rendered 1`] = `
<div
  class="ouiFlexGrid ouiFlexGrid--gutterLarge ouiFlexGrid--wrap"
/>
`;
